FIX style overflow navbar

--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -3,7 +3,7 @@
 .navbar{
     background-color: $light-color;
     padding: 0 $small-spacing;
-    overflow-x: scroll;
+    overflow-x: auto;
     &__list{
         display: flex;
         justify-content: flex-start;
